[gd_scene load_steps=7 format=2]

[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/ui/menu_button_press.png" type="Texture" id=2]
[ext_resource path="res://Assets/ui/menu_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=4]
[ext_resource path="res://DungeonCrawler/UI/Settings/Settings.gd" type="Script" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends ParallaxBackground


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
export (float) var scrolling_speed = 500.0

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x += scrolling_speed + delta
"

[node name="Settings" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="ParallaxBackground" parent="." index="0"]
script = SubResource( 1 )

[node name="Label" parent="." index="3"]
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Settings"

[node name="Container" type="VBoxContainer" parent="." index="5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -17.0
margin_right = 70.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangePasswordButton" type="TextureButton" parent="Container" index="0"]
margin_right = 130.0
margin_bottom = 15.0
rect_min_size = Vector2( 130, 15 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Container/ChangePasswordButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.353546
margin_right = 0.353546
rect_min_size = Vector2( 130, 15 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Change Password"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeDisplayNameButton" type="TextureButton" parent="Container" index="1"]
margin_top = 19.0
margin_right = 130.0
margin_bottom = 34.0
rect_min_size = Vector2( 130, 15 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Container/ChangeDisplayNameButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -46.0
margin_bottom = -5.0
rect_min_size = Vector2( 130, 15 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Change Display name"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Container/ChangePasswordButton" to="." method="_on_ChangePasswordButton_pressed"]
[connection signal="pressed" from="Container/ChangeDisplayNameButton" to="." method="_on_ChangeDisplayNameButton_pressed"]
